@@ -187,7 +187,10 @@
                         <include>**/*Test.java</include>
                         <include>**/*Tests.java</include>
                     </includes>
-                    <argLine>-XX:+AllowRedefinitionToAddDeleteMethods --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED</argLine>
+                    <excludes>
+                        <exclude>**/QRCodeRenderingTest.java</exclude>
+                    </excludes>
+                    <argLine>-XX:+AllowRedefinitionToAddDeleteMethods --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED -Dnet.bytebuddy.experimental=true</argLine>
                 </configuration>
             </plugin>
         </plugins>
